tests/invalid/invalid-014.inox
Module Invalid014

Main() :
    var X := True * 3
;
